revert to old model with rank 3

--- a/py_files/sparkml.ipynb
+++ b/py_files/sparkml.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.types import IntegerType, StringType\n"
+    "from pyspark.sql.types import IntegerType, StringType"
    ]
   },
   {
@@ -33,7 +33,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/04/16 14:42:16 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/04/17 12:04:05 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -44,16 +44,7 @@
     "    .config(\"spark.sql.repl.eagerEval.maxNumRows\", 10)\n",
     "    .config(\"spark.driver.memory\", \"4g\")\n",
     "    .getOrCreate()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark_df = spark.read.parquet(\"work_df.parquet\")\n"
+    ")\n"
    ]
   },
   {
@@ -62,12 +53,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "spark_df = spark.read.parquet(\"outputs/work_df\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "root\n",
+      " |-- index: long (nullable = true)\n",
       " |-- userId: short (nullable = true)\n",
       " |-- bookId: short (nullable = true)\n",
+      " |-- isbn13: long (nullable = true)\n",
       " |-- title: string (nullable = true)\n",
       " |-- language: string (nullable = true)\n",
       " |-- rating: long (nullable = true)\n",
@@ -76,12 +86,12 @@
     }
    ],
    "source": [
-    "spark_df.printSchema()\n"
+    "spark_df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +101,12 @@
     "        \"bookId\": F.col(\"bookId\").cast(IntegerType()),\n",
     "        \"rating\": F.col(\"rating\").cast(IntegerType()),\n",
     "    }\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,8 +114,10 @@
      "output_type": "stream",
      "text": [
       "root\n",
+      " |-- index: long (nullable = true)\n",
       " |-- userId: integer (nullable = true)\n",
       " |-- bookId: integer (nullable = true)\n",
+      " |-- isbn13: long (nullable = true)\n",
       " |-- title: string (nullable = true)\n",
       " |-- language: string (nullable = true)\n",
       " |-- rating: integer (nullable = true)\n",
@@ -114,14 +126,21 @@
     }
    ],
    "source": [
-    "spark_df.printSchema()\n"
+    "spark_df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -158,14 +177,14 @@
        "only showing top 10 rows"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "book_ratings = spark_df.select(\"userId\", \"bookId\", \"rating\")\n",
-    "book_ratings\n"
+    "book_ratings"
    ]
   },
   {
@@ -178,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
     "from pyspark.ml.recommendation import ALS, ALSModel\n",
-    "from pyspark.ml.evaluation import RegressionEvaluator\n"
+    "from pyspark.ml.evaluation import RegressionEvaluator"
    ]
   },
   {
@@ -197,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(train, test) = book_ratings.randomSplit([0.8, 0.2], seed=42)\n"
+    "(train, test) = book_ratings.randomSplit([0.8, 0.2], seed=42)"
    ]
   },
   {
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,66 +244,74 @@
     "    nonnegative=True,\n",
     "    coldStartStrategy=\"drop\",\n",
     "    seed=42,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluator = RegressionEvaluator(\n",
-    "    metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\"\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/04/16 14:42:21 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "simple_model = als.fit(train)\n"
+    "evaluator = RegressionEvaluator(\n",
+    "    metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\"\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/04/17 12:07:47 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "predictions = simple_model.transform(test)\n"
+    "simple_model = als.fit(train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = simple_model.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "<table border='1'>\n",
        "<tr><th>userId</th><th>bookId</th><th>rating</th><th>prediction</th></tr>\n",
-       "<tr><td>148</td><td>3473</td><td>10</td><td>10.002486</td></tr>\n",
-       "<tr><td>148</td><td>5909</td><td>7</td><td>8.571875</td></tr>\n",
-       "<tr><td>463</td><td>357</td><td>8</td><td>4.8718247</td></tr>\n",
-       "<tr><td>463</td><td>867</td><td>5</td><td>8.3573065</td></tr>\n",
-       "<tr><td>471</td><td>1290</td><td>10</td><td>8.063271</td></tr>\n",
-       "<tr><td>471</td><td>6153</td><td>10</td><td>6.145279</td></tr>\n",
-       "<tr><td>496</td><td>3655</td><td>9</td><td>9.084567</td></tr>\n",
-       "<tr><td>833</td><td>915</td><td>5</td><td>6.2888594</td></tr>\n",
-       "<tr><td>833</td><td>2056</td><td>5</td><td>4.594879</td></tr>\n",
-       "<tr><td>1088</td><td>3760</td><td>7</td><td>7.8322515</td></tr>\n",
+       "<tr><td>1395</td><td>6654</td><td>10</td><td>8.268562</td></tr>\n",
+       "<tr><td>2563</td><td>463</td><td>7</td><td>8.162191</td></tr>\n",
+       "<tr><td>2563</td><td>3749</td><td>8</td><td>6.869559</td></tr>\n",
+       "<tr><td>1884</td><td>8389</td><td>10</td><td>7.128739</td></tr>\n",
+       "<tr><td>5140</td><td>7982</td><td>6</td><td>5.1622477</td></tr>\n",
+       "<tr><td>847</td><td>4519</td><td>7</td><td>8.53499</td></tr>\n",
+       "<tr><td>5055</td><td>2366</td><td>8</td><td>5.5020676</td></tr>\n",
+       "<tr><td>2463</td><td>2366</td><td>10</td><td>9.577781</td></tr>\n",
+       "<tr><td>4443</td><td>5300</td><td>7</td><td>6.251077</td></tr>\n",
+       "<tr><td>4230</td><td>8638</td><td>10</td><td>9.2928505</td></tr>\n",
        "</table>\n",
        "only showing top 10 rows\n"
       ],
@@ -306,39 +333,46 @@
        "only showing top 10 rows"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.8919501331030917"
-      ]
-     },
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rmse = evaluator.evaluate(predictions)\n",
-    "rmse\n"
+    "predictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.8919501331030912"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmse = evaluator.evaluate(predictions)\n",
+    "rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,12 +382,12 @@
     "    .addGrid(als.rank, [3, 5, 10])\n",
     "    .addGrid(als.regParam, [0.1, 0.5])\n",
     "    .build()\n",
-    ")"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -365,12 +399,12 @@
     }
    ],
    "source": [
-    "print(f\"Num. Models: {len(param_grid)}\")\n"
+    "print(f\"Num. Models: {len(param_grid)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,33 +414,25 @@
     "    evaluator=evaluator,\n",
     "    parallelism=4,\n",
     "    numFolds=3,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "tuned_model = cv.fit(train)\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/04/17 12:08:24 WARN BlockManager: Block rdd_293_0 already exists on this machine; not re-adding it\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "best_model = tuned_model.bestModel\n"
+    "tuned_model = cv.fit(train)"
    ]
   },
   {
@@ -415,12 +441,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_2 = best_model.transform(test)\n"
+    "best_model = tuned_model.bestModel"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_2 = best_model.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +500,7 @@
     }
    ],
    "source": [
-    "predictions_2\n"
+    "predictions_2"
    ]
   },
   {
@@ -473,6 +508,13 @@
    "execution_count": 23,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -486,7 +528,7 @@
    ],
    "source": [
     "rmse_2 = evaluator.evaluate(predictions_2)\n",
-    "rmse_2\n"
+    "rmse_2"
    ]
   },
   {
@@ -497,7 +539,7 @@
     {
      "data": {
       "text/plain": [
-       "ALSModel: uid=ALS_bcf7f2fd9a1e, rank=3"
+       "ALSModel: uid=ALS_eab784e17b3c, rank=3"
       ]
      },
      "execution_count": 24,
@@ -506,7 +548,7 @@
     }
    ],
    "source": [
-    "best_model\n"
+    "best_model"
    ]
   },
   {
@@ -521,11 +563,19 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "if os.path.exists(\"alsrecommend.model\"):\n",
     "    shutil.rmtree(\"alsrecommend.model\")\n",
-    "best_model.save(\"alsrecommend.model\")\n"
+    "best_model.save(\"alsrecommend.model\")"
    ]
   },
   {
@@ -534,8 +584,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.stop()\n"
+    "spark.stop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
